# voxel-game-pp

./: Cargo.toml  index.html  readme.md
.cargo/: config.toml
assets/shaders/: chunk_shader.wgsl
src/: chunk.rs  chunk_mesh_builder.rs  debug.rs  fly_cam.rs  main.rs  prelude.rs  voxel_constants.rs  world.rs
src/chunks/: block.rs  chunk.rs  chunk_loading.rs  chunk_mesh_generation.rs  direction.rs  material.rs  mod.rs  world_generation.rs
src/user/: player.rs
src/utils/: debug.rs  fly_cam.rs  mod.rs
src/world/: chunk.rs  chunk_mesh_builder.rs  mod.rs  voxel_constants.rs  world.rs
