[package]
name = "voxel_game_pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18"
block-mesh="*"
bevy_flycam = { git = "https://github.com/NiklasEi/bevy_flycam.git", branch="bevy_main" }
noise = "0.8"
rand = "*"
bevy_rapier3d = { version = "*", features = [ "simd-stable",  "parallel", "debug-render" ] }

# Async / Multithreaded
# strum = "0.24"
# strum_macros = "0.24"
# rayon = "1.5"
# futures-lite = "*"

# Multiplayer
# serde = { version = "1.0", features = [ "derive" ] } 
# local-ip-address = "0.5"
# bincode = "1.3"
# bevy_renet = "0.0.7"
# renet_visualizer = { version = "0.0.4", features = ["bevy"] }
# lz4 = "1.21.0"

# For port forward
# public-ip = "0.2"
# tokio = { version = "1", features = ["full"]}

# Physics
# bevy_rapier3d = { version = "*", features = [ "simd-stable",  "parallel", "debug-render" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.10"
features = ["dynamic_linking"]

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3